# project-agastya

./: BUILD_LOGS.md  Building A Personal LLM Agent.md  appen-and-review-helping-article.txt  plan.md
.obsidian/: workspace.json
agastya/: README.md  pyproject.toml
agastya/src/agastya/: __init__.py  cli.py
agastya/src/agastya/builtins/: __init__.py  file_ops.py  inbox.py
agastya/src/agastya/core/: __init__.py  agent.py  config.py  context.py
agastya/src/agastya/features/: __init__.py
agastya/src/agastya/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
agastya/src/agastya/mana/: __init__.py  git.py  manager.py  nav.py
agastya/src/agastya/shell/: __init__.py  executor.py
agastya/src/agastya/tools/: builtin_registrations.py  registry.py  tavily.py
agastya/src/agastya/tui/: __init__.py  app.py  chat.py  sidebar.py
agastya/src/agastya/tui/screens/: __init__.py
agastya/src/agastya/tui/widgets/: __init__.py
agastya/src/agastya/utils/: __init__.py
agastya/tests/: .gitkeep  test_agent.py  test_builtins_file_ops.py  test_cli.py  test_config.py  test_context.py  test_inbox.py  test_llm_anthropic.py  test_llm_base.py  test_llm_openai.py  test_mana_git.py  test_mana_manager.py  test_mana_nav.py  test_shell_executor.py  test_tools.py  test_tui_app.py  test_tui_chat.py  test_tui_sidebar.py
