[project]
name = "agastya"
version = "0.1.0"
description = "LLM-powered knowledge agent with persistent, compounding manas"
readme = "README.md"
authors = [
    { email = "prabhatdwivedi411@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.21.0",
]

[project.scripts]
mana = "agastya.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
